cmake_minimum_required(VERSION 3.19.0)
project(c_cpp_algorithms_and_data_structures LANGUAGES C CXX)

# Add subdirectory
# ==========================================================================
add_subdirectory(${CMAKE_SOURCE_DIR}/data_structures)

# Enable testing
# ==========================================================================
enable_testing()