# Add subdirectory
# ==========================================================================
add_subdirectory(doubly_linked_list)
add_subdirectory(single_linked_list)
# add_subdirectory(hash_table)
# add_subdirectory(heap)
# add_subdirectory(queue)
# add_subdirectory(priority_queue)
# add_subdirectory(stack)